<resources>
    <string name="app_name">Travelogue</string>
    <string name="popular_cities">Popular Cities</string>
    <string name="kerala">Kerala</string>
    <string name="zurich">Zurich</string>
    <string name="paris">Paris</string>
    <string name="dublin">Dublin</string>
    <string name="popular_tours">Popular Tours</string>
    <string name="placeholder_tourcost">Euro 50 per person</string>
    <string name="placeholder_tourTime">10 hours</string>
    <string name="dubtogal">Travel with us on one of our wonderful day trips from Dublin to the Cliffs of Moher in
        County Clare. Located on Ireland\’s wild rugged Atlantic coast, the cliffs were recently voted as the seventh
        most wonderful heritage site in the world in a global poll conducted by UNESCO. Enjoy the breath-taking scenery
        of Ireland\’s rugged West Coast as we travel along the spectacular Wild Atlantic Way to one of Ireland\’s national
        treasures and a UNESCO Global Geopark, the Burren. Visit the medieval city of Galway and enjoy a 30-minute guided
        tour of this historic and vibrant city, widely known as Ireland\’s most Irish city, before returning
        to Dublin with wonderful memories.</string>
    <string name="dubtobel">Giant\’s Causeway and Belfast city day tour passing through the Boyne Valley, home to the
        five thousand year old Hill of Tara, the ancient capital of the High Kings of Ireland. Learn about the Battle
        of Boyne between King James (Catholic) and King William of Orange (Protestant – Dutch), a chapter in history
        which was hugely significant in the political, cultural and religious destinies of both Ireland and Britain.
        Crossing the border into the north of Ireland, your guide will have some fascinating observations for you to see.
        On your Belfast tour you will immediately observe how different it will look compared to Dublin.
        Belfast was the only city in Ireland which experienced the Industrial Revolution of Britain during the 19th
        century</string>
    <string name="parischarms">From the majestic Louvre to the regal Palais Royal,this neighbourhood oozes luxury.
        The grand arches along Rue de Rivoli are shadowed by mosaics in front of decorated vitrines and hotels.
        Place Vendôme is lined with the world\’s best jewelers and their glittering window displays.
        Every other establishment has someone to open the door for you or park your car.You can spend hours gazing
        at its haute couture shops or lingering over a meal at any of its chic eateries.After all that indulgence,
        the Tuileries gardens provide stately respite, while theatres compete for your applause.
        It is a neighbourhood that draws admirers from around the world, all attracted to the luxe life in Paris.</string>
    <string name="parisfood">Embark on a culinary tour of Paris Montmartre neighborhood,one of the citys most charming
        neighborhoods. Sample delicacies like croissants and éclairs at a local patisserie, enjoy a guided tasting of
        various cheeses at a fromagerie and satisfy your sweet tooth at a classic chocolaterie. Of course no gourmet
        tour of Paris would be complete without a stop at a boulangerie, where you will learn the proper way to eat a
        baguette in France.Montmartre is the perfect district for Paris food tours because of the area\'s flourishing
        restaurant scene, historical culture and charming ambiance. In the past, windmills, farming areas and art
        studios were prominent features of the Montmartre landscape. Now the area boasts an abundance of first-class
        wine bars, fine dining restaurants and rare shops, all adding to its appeal as one of the best and most unique
        food destinations in the world</string>
    <string name="zurichcruise">Discover the picturesque beauty of Lucerne on a full-day trip from Zurich.
        Cruise the shimmering surface of Lake Lucerne during a tranquil boat ride; absorb gorgeous panoramas of the
        Albis Pass mountain range and explore the historically rich city independently during some leisurely free time.
        Delve into Lucerne\’s fascinating past on a guided sightseeing tour and listen to illuminating commentary
        from an expert guide.Enjoy the convenience of round-trip transportation from Zurich on this magical excursion.</string>
    <string name="pragueriver">Tap into Prague\'s famous party spirit on this 4-hour evening riverside hangout
        and guided walking tour. Meet up near the Charles Bridge, and enjoy unlimited beer and sangria as you take
        relaxed guided walks around different monuments and the cobbled Mala Strana district. Midway through,
        savor dinner under the bridge, and finish by creating your own street art on the John Lennon Wall.</string>
    <string name="placeholder_cost">50</string>
    <string name="book_now">Book Now</string>
    <string name="overview">Overview</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kerala_country">India</string>
    <string name="kerala_description">Kerala is state in South India on the Malabar Coast. Spread over 38,863 km2
        (15,005 sq mi), it is bordered by Karnataka to the north and northeast, Tamil Nadu to the east and south,
        and the Lakshadweep Sea to the west. With 33,387,677 inhabitants as per the 2011 Census,
        Kerala is the thirteenth-largest Indian state by population. It is divided into 14 districts with the
        capital and the largest city being Thiruvananthapuram.Malayalam is the most widely spoken language and
        is also the official language of the state. The state has the highest media exposure in India with newspapers
        publishing in nine languages, mainly English and Malayalam. Kerala is one of the prominent tourist destinations
        of India, with backwaters, beaches, Ayurvedic tourism and tropical greenery as its major attractions.</string>
    <string name="kerala_attractions">Black Water, beaches, Ayurvedic Tourism</string>
    <string name="kerala_specialities">Coconut, Coffee, Handlooms, Spices</string>
    <string name="kerala_language">Malayalam</string>
    <string name="goa_country">India</string>
    <string name="goa_description">Goa is a state within coastal region known as Konkan in India.It is bounded by
        Maharashtra to the north and Karnataka to the east and south, with the Arabian Sea forming its Western coast.
        It is India\'s smallest state by area and the fourth smallest by population. Goa has the highest GDP per capita
        among all Indian states, that is two and a half times that of the country. It was ranked the best placed state
        by the \"Eleventh Finance Commission\" for its infrastructure and ranked on top for the best quality of life in
        India by the National Commission on Population based on the 12 Indicators. Panaji is the state\'s capital,
        while Vasco da Gama is its largest city. Goa is visited by large numbers of international and domestic tourists
        each year for its beaches, places of worship and world heritage architecture.
        It has rich flora and fauna, owing to its location on the Western Ghats range, a biodiversity hotspot.</string>
    <string name="goa_attractions">Beaches, Temples, Forts, World Heritage and Architecture</string>
    <string name="goa_specialities">Sea Food, Junk Jewellery, Sea Shells</string>
    <string name="goa_language">Konkani</string>
    <string name="dublin_country">Ireland</string>
    <string name="dublin_description">Dublin is the capital and largest city of Ireland. Dublin is in the province of
        Leinster on Ireland\'s east coast, at the mouth of the River Liffey. The city has an urban area population of
        1,173,179.The population of the Greater Dublin Area, as of 2016, was 1,904,806 people. As of 2010, Dublin was
        listed by the Globalization and World Cities Research Network (GaWC) as a global city, with a ranking of \"Alpha-\",
        which places it amongst the top thirty cities in the world.It is a historical and contemporary centre for education,
        the arts, administration, economy and industry.</string>
    <string name="dublin_attractions">Samuel Beckett Bridge, Street Arts, Trinity College, Contemporary Art and Architectures</string>
    <string name="dublin_specialities">Irish Coffee, Listons, Stew, Beers and Music</string>
    <string name="dublin_language">Gaelic</string>
    <string name="prague_country">Czech Republic</string>
    <string name="prague_description">Prague is the capital and largest city of the Czech Republic. It is the 14th
        largest city in the European Union.It is also the historical capital of Bohemia. Situated in the north-west
        of the country on the Vltava river, the city is home to about 1.4 million people, while its larger urban zone
        is estimated to have a population of 2.2 million.The city has a temperate climate, with warm summers and chilly
        winters. Prague is home to a number of famous cultural attractions, many of which survived the violence and destruction
        of 20th-century Europe. Main attractions include the Prague Castle, the Charles Bridge, Old Town Square with the
        Prague astronomical clock, the Jewish Quarter, Petřín hill and Vyšehrad. Since 1992, the extensive historic
        centre of Prague has been included in the UNESCO list of World Heritage Sites. Its rich history makes it a popular
        tourist destination, and the city receives more than 6.4 million international visitors annually, as of 2014.
        Prague is the fifth most visited European city after London, Paris, Istanbul and Rome.</string>
    <string name="prague_attractions">Prague Castle, Charles Bridge, Prague Astronimal Clock, Prague Zoo</string>
    <string name="prague_specialities">CZech beers and cuisines (roast pork, fruit dumplings and apple strudel)</string>
    <string name="prague_language">Czech</string>
    <string name="paris_country">France</string>
    <string name="paris_description">Paris is the capital and the most populous city of France, with an administrative
        -limits area of 105 square kilometres (41 square miles) and a 2015 population of 2,229,621. By the 17th century
        Paris had become one of Europe\'s major centres of finance, commerce, fashion, science, and the arts, a position
        that it retains still today. The Paris Region had a GDP of €649.6 billion (US $763.4 billion) in 2014, accounting
        for 30.4 percent of the GDP of France.According to official estimates, the Paris Region has the fourth-highest GDP
        in the world and the largest regional GDP in the EU.Paris is especially known for its museums and architectural
        landmarks: its Louvre was the most visited art museum in the world in 2016, with 7.4 million visitors. In 2017,
        the European Commission ranked it as the most \"Culturally Vibrant City\" in the EU and its central Seine River
        banks are classified as a UNESCO Heritage Site.</string>
    <string name="paris_attractions">Eiffel Tower, Notre Dame de Paris, Pyramid Louvre, Tuileries Garden</string>
    <string name="paris_specialities">Baguette, Steak-frites, Croque-monsieur, Jambon-beurre</string>
    <string name="paris_language">French</string>
    <string name="zurich_country">Switzerland</string>
    <string name="about_the_city">About the City</string>
    <string name="known_for">Known for</string>
    <string name="official_language">Official Language</string>
    <string name="country">Country</string>
    <string name="goa">Goa</string>
    <string name="prague">Prague</string>
    <string name="placeholder_overview">The description of the tour will be done here.</string>
    <string name="placeholder_tour_header">Dublin to Galway</string>
</resources>