<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_pink"
    tools:context="artist.web.mytourguide.fragments.CityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    android:textSize="@dimen/text_16"
                    android:layout_marginBottom="@dimen/margin_5"
                    android:textColor="@color/dark_red"/>
                <TextView
                    android:id="@+id/country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="India"
                    android:textSize="@dimen/text_14"
                    android:textColor="@color/violet"/>

                <TextView
                    android:id="@+id/label_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/official_language"
                    android:textSize="@dimen/text_16"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginBottom="@dimen/margin_5"
                    android:textColor="@color/dark_red"/>
                <TextView
                    android:id="@+id/language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Malayalam"
                    android:textSize="@dimen/text_14"
                    android:textColor="@color/violet"/>

                <TextView
                    android:id="@+id/label_attractions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Major Attractions"
                    android:textSize="@dimen/text_16"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginBottom="@dimen/margin_5"
                    android:textColor="@color/dark_red"/>

                <TextView
                    android:id="@+id/attractions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Black Waters, beaches, Ayurvedic Tourism "
                    android:textSize="@dimen/text_14"
                    android:textColor="@color/violet"/>

                <TextView
                    android:id="@+id/label_speciality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/known_for"
                    android:textSize="@dimen/text_16"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginBottom="@dimen/margin_5"
                    android:textColor="@color/dark_red"/>

                <TextView
                    android:id="@+id/specials"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Cocunut, coffee, Handlooms, spices"
                    android:textSize="@dimen/text_16"
                    android:textColor="@color/violet"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/place_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_250dp"
                    tools:src="@drawable/kerala1"/>


            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/label_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_16"
            android:layout_marginTop="@dimen/margin_12dp"
            android:padding="@dimen/padding_5dp"
            android:background="@color/color_pink"
            android:textColor="@color/dark_red"
            android:text="@string/about_the_city"/>

        <TextView
            android:id="@+id/about_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_14"
            android:layout_marginTop="@dimen/margin_8dp"
            android:padding="@dimen/padding_5dp"
            android:textColor="@color/dark_red"
            tools:text="This will contain content about the city"
            android:background="@color/light_violet"/>


    </LinearLayout>


</ScrollView>
